--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,6 @@
 MONGO_URI=mongodb+srv://sahil07prajapati01234:Wsb2xaxHAaVnu6f6@cluster0.7ymbksx.mongodb.net/
 PORT=8000
 SECRET_KEY=bjbihoihvxhiuvygiahodnzvoi
-CLOUDINARY_CLOUD_NAME=dn5lkwdlx
-CLOUDINARY_API_KEY=151553967362899
-CLOUDINARY_API_SECRET=BtcW7p3YKr_zUlNmYjpoLoncVuk
+CLOUD_NAME=dn5lkwdlx
+API_KEY=151553967362899
+API_SECRET=BtcW7p3YKr_zUlNmYjpoLoncVuk
