--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,2 +1,11 @@
 .env
 node_modules/
+# Dependency directories
+node_modules/
+
+# Local env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
