--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,11 +1,27 @@
-.env
-node_modules/
-# Dependency directories
-node_modules/
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Local env files
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
+env\
