--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,12 @@
-.env
-node_modules/
+# Dependencies
+# --------------------
+# This folder is auto-generated and can be massive. Recreate it with 'npm install'.
+/node_modules
+
+
+# Environment Variables
+# --------------------
+# Contains secrets and environment-specific settings. Never commit this file.
 .env
 .env.local
 .env.development.local
@@ -7,5 +14,19 @@ node_modules/
 .env.production.local
 
 
+# Build artifacts & Logs
+# --------------------
+# Compiled output, logs, and other generated files.
+/build
+/dist
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 
+# Operating System files
+# --------------------
+.DS_Store
+Thumbs.db
+
+package.json
